--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "connect-timeout": "^1.9.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "4.17.1",
@@ -19,14 +20,11 @@
     "morgan": "1.10.0",
     "nodemon": "^2.0.12"
   },
-  
   "devDependencies": {},
-
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MeGaXV/Full-Stack-Task-1-Anime-Website/issues"
   },
   "homepage": "https://github.com/MeGaXV/Full-Stack-Task-1-Anime-Website#readme"
-
 }
